app/echoesworks.css
html {
    height: 100%; /* <------------ */
}

body {
    height: 100%; /* <------------ */
    overflow:hidden;
}

div.show {
    height: 100%;
}

section {
    font-size: 1em;
    display: block;
    width: 100%;
    min-height: 600px;
    height: 80%;
    background-color: #ecf0f1;
    border-radius: 10px;
    border: 1px solid rgba(0, 0, 0, .1);
    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
    color: #34495e;
    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

section h1 {
    font-size: 4em;
    min-width: 200px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

section h2 {
    font-size: 2.8em;
}

section h1,
section h2,
section h3,
section ul,
section b,
section p {
    padding: 0 0 0 40px;
}

section b,
section strong {
    font-size: 2em;
}

section ul {
    margin-left: 5em;
}

section ul li {
    font-size: 2.5em;
}

section.first h1 {
    top: 30%;
    font-size: 5em;
    position: relative;
}

section.first h2 {
    font-size: 2.8em;
    color: #00bcd4;
    top: 30%;
    left: 60%;
    position: relative;
}

slide {
    width: 50%;
    float: left;
}

slide section {
    display: none;
}

section.active {
    display: block;
    height: 100%;
    position: relative;
}

pre {
    width: 49%;
    float: right;
    color: #ecf0f1;
    font-size: 1.2em;
    background-color: #34495e;
    border-radius: 10px;
    min-height: 600px;
    height: 100%;
    margin: 0;
}

words {
    width: 100%;
    height: 15%;
    bottom: 0;
    position: fixed;
    left: 5%;
    font-size: 3em;
    color: #888888;;
}

.full {
    width: 100%;
    height: 100%;
}

.full slide {
    width: 100%;
}

.full code {
    display: none;
}

.hidden {
    display: none;
}

.image-left {
    margin-left: 10%;
    width: 50%;
    height: 100%;
}

.image-right {
    float: right;
    width: 50%;
    height: 100%;
}

.left {
    float: left;
    width: 50%;
}

.right {
    float: right;
    width: 50%;
}

